--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -5,12 +5,17 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
+  display: flex; /* Change from 'none' to 'flex' */
   justify-content: center;
   align-items: center;
   font-size: x-large;
   z-index: 1000; /* Ensure it's above all other elements */
 }
+
+/* Remove this class as it's no longer needed */
+/* .modal-overlay.active {
+  display: flex;
+} */
 
 .modal-content {
   display: flex;
